--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -63,7 +63,12 @@ aside {
     background-color: #B92025;
     height: 70px;
     line-height: 70px;
-    padding-left: 15px; }
+    padding-left: 15px;
+    position: fixed;
+    width: 270px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2); }
+  aside nav {
+    margin-top: 70px; }
   aside nav > ul > li > a {
     border-left: solid 3px transparent; }
     aside nav > ul > li > a:hover {
@@ -105,7 +110,11 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 70px; }
+  height: 70px;
+  position: fixed;
+  width: calc(100% - 270px);
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
+  z-index: 2; }
 
 .toggle-sidenav a {
   display: inline-block;
@@ -144,7 +153,8 @@ header {
   color: #060034; }
 
 .main-content {
-  padding: 15px; }
+  padding: 15px;
+  margin-top: 70px; }
 
 .action-n-filter {
   display: flex;
@@ -157,23 +167,31 @@ header {
   padding: 7px 20px;
   border-radius: 20px;
   font-size: 14px;
-  color: #EFD898; }
+  color: #EFD898;
+  transition: all .2s; }
+  .action-section a:hover {
+    background-color: #060034;
+    color: #d8c592; }
 
 .dataTables_length {
   display: none; }
 
 .dataTables_filter {
-  position: absolute;
-  right: 0;
-  top: -38px; }
+  position: relative; }
   .dataTables_filter label {
-    color: white; }
+    color: white;
+    position: absolute;
+    right: 0;
+    top: -63px; }
     .dataTables_filter label input {
       border-radius: 5px;
-      border: solid 2px lightgray; }
+      border: solid 2px lightgray;
+      width: 250px; }
 
 table.dataTable thead th, table.dataTable thead td {
-  background-color: #EFD898; }
+  background-color: #EFD898;
+  padding-left: 10px;
+  padding-right: 10px; }
 
 table.dataTable thead th:first-child {
   border-top-left-radius: 5px; }
@@ -190,6 +208,12 @@ table.dataTable thead th:last-child {
 
 .modal-body .dataTables_filter, .modal-body .dataTables_info, .modal-body .dataTables_paginate {
   display: none; }
+.modal-body label {
+  font-weight: 600; }
+
+legend {
+  font-size: 18px;
+  font-weight: 500; }
 
 .modal-footer {
   padding: 0; }
@@ -198,12 +222,72 @@ table.dataTable thead th:last-child {
     width: 50%;
     border: none;
     color: #EFD898;
-    padding: 15px; }
+    padding: 15px;
+    transition: all .2s;
+    font-weight: 500; }
     .modal-footer button.false {
       background-color: #B92025;
-      border-bottom-left-radius: 4px; }
+      border-bottom-left-radius: 4px;
+      border-right: solid 1px #EFD898; }
+      .modal-footer button.false:hover {
+        background-color: #a01419; }
     .modal-footer button.true {
       background-color: #004282;
-      border-bottom-right-radius: 4px; }
+      border-bottom-right-radius: 4px;
+      border-left: solid 1px #EFD898; }
+      .modal-footer button.true:hover {
+        background-color: #0a3967; }
+
+.breadcrumb {
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.125); }
+
+.breadcrumb-item + .breadcrumb-item::before {
+  content: ">"; }
+
+.card-header {
+  background-color: #1A1448;
+  color: #EFD898;
+  font-weight: 500; }
+
+tbody tr td:first-child {
+  display: flex;
+  justify-content: space-around;
+  align-items: center; }
+
+.fa-edit {
+  color: #1A1448; }
+
+.fa-trash-alt {
+  color: #B92025; }
+
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+  padding: 0; }
+
+.page-item.active .page-link {
+  background-color: #004282;
+  border-color: #004282; }
+
+.page-link {
+  color: #004282; }
+
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+  border: none;
+  background: none; }
+
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+  border: none;
+  background: none; }
+
+select {
+  -webkit-appearance: none;
+  background-image: url("./../images/icon_up-arrow-small.png");
+  background-repeat: no-repeat;
+  background-position: 98% center; }
+
+.period {
+  background-image: url(./../images/calendar.png);
+  background-repeat: no-repeat;
+  background-position: 98% center; }
 
 /*# sourceMappingURL=master.css.map */
