--- a/assets/css/master.scss
+++ b/assets/css/master.scss
@@ -95,6 +95,13 @@ aside {
         height: 70px;
         line-height: 70px;
         padding-left: 15px;
+        position: fixed;
+        width: 270px;
+        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+    }
+
+    nav {
+        margin-top: 70px;
     }
 
     nav > ul > li > a {
@@ -161,6 +168,10 @@ header {
     justify-content: space-between;
     align-items: center;
     height: 70px;
+    position: fixed;
+    width: calc(100% - 270px);
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
+    z-index: 2;
 }
 
 .toggle-sidenav a {
@@ -218,6 +229,7 @@ header {
 
 .main-content {
     padding: 15px;
+    margin-top: 70px;
 }
 
 .action-n-filter {
@@ -233,6 +245,12 @@ header {
     border-radius: 20px;
     font-size: 14px;
     color: $gold;
+    transition: all .2s;
+
+    &:hover {
+        background-color: $dark-blue;
+        color: $dark-gold;
+    }
 }
 
 .dataTables_length {
@@ -240,22 +258,28 @@ header {
 }
 
 .dataTables_filter {
-    position: absolute;
-    right: 0;
-    top: -38px;
+    position: relative;
+    // right: 0;
+    // top: -38px;
 
     label {
         color: white;
+        position: absolute;
+        right: 0;
+        top: -63px;
 
         input {
             border-radius: 5px;
             border: solid 2px lightgray;
+            width: 250px;
         }
     }
 }
 
 table.dataTable thead th, table.dataTable thead td {
     background-color: $gold;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 table.dataTable thead th:first-child {
@@ -280,6 +304,15 @@ table.dataTable thead th:last-child {
     .dataTables_filter, .dataTables_info, .dataTables_paginate {
         display: none;
     }
+
+    label {
+        font-weight: 600;
+    }
+}
+
+legend {
+    font-size: 18px;
+    font-weight: 500;
 }
 
 .modal-footer {
@@ -291,16 +324,93 @@ table.dataTable thead th:last-child {
         border: none;
         color: $gold;
         padding: 15px;
+        transition: all .2s;
+        font-weight: 500;
 
         &.false {
             background-color: $red;
-            border-bottom-left-radius: 4px
+            border-bottom-left-radius: 4px;
+            border-right: solid 1px $gold;
+
+            &:hover {
+                background-color: #a01419;
+            }
         }
 
         &.true {
             background-color: $blue;
             border-bottom-right-radius: 4px;
+            border-left: solid 1px $gold;
+
+            &:hover {
+                background-color: #0a3967;
+            }
         }
     }
 
+}
+
+.breadcrumb {
+    background-color: white;
+    border: 1px solid rgba(0,0,0,.125);
+}
+
+.breadcrumb-item+.breadcrumb-item::before {
+    content: ">";
+}
+
+.card-header {
+    background-color: $deep-blue;
+    color: $gold;
+    font-weight: 500;
+}
+
+tbody tr td:first-child {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.fa-edit {
+    color: $deep-blue;
+}
+
+.fa-trash-alt {
+    color: $red;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+    padding: 0;
+}
+
+.page-item.active .page-link {
+    background-color: $blue;
+    border-color: $blue;
+}
+
+.page-link {
+    color: $blue;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+    border: none;
+    background: none;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+    border: none;
+    background: none;
+}
+
+select {
+    -webkit-appearance: none;
+    background-image: url("./../images/icon_up-arrow-small.png");
+    background-repeat: no-repeat;
+    background-position: 98% center;
+}
+
+.period {
+    background-image: url(./../images/calendar.png);
+    background-repeat: no-repeat;
+    background-position: 98% center;
 }
