--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -58,7 +58,8 @@ aside {
   background-color: #1A1448;
   width: 270px;
   min-height: 100vh;
-  padding-bottom: 30px; }
+  padding-bottom: 30px;
+  transition: all .2s; }
   aside .company-logo {
     background-color: #B92025;
     height: 70px;
@@ -114,7 +115,8 @@ header {
   position: fixed;
   width: calc(100% - 270px);
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
-  z-index: 2; }
+  z-index: 2;
+  transition: all .2s; }
 
 .toggle-sidenav a {
   display: inline-block;
@@ -289,5 +291,20 @@ select {
   background-image: url(./../images/calendar.png);
   background-repeat: no-repeat;
   background-position: 98% center; }
+
+.has-ul .fa-angle-down {
+  float: right;
+  margin-top: 5px;
+  text-align: center;
+  transition: all .2s; }
+
+.has-ul.active .fa-angle-down {
+  transform: rotate(180deg); }
+
+aside.zero-width {
+  width: 0; }
+
+header.full-width {
+  width: 100%; }
 
 /*# sourceMappingURL=master.css.map */
