--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1,4 +1,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+table.dataTable thead .sorting {
+  background-image: url("./../images/sort.png");
+  background-position-x: 95%; }
+
+table.dataTable thead .sorting_asc {
+  background-image: url("./../images/sort-asc.png");
+  background-position-x: 95%; }
+
+table.dataTable thead .sorting_desc {
+  background-image: url("./../images/sort-desc.png");
+  background-position-x: 95%; }
+
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+  margin: 0; }
+
+.breadcrumb-item {
+  font-weight: 600; }
+  .breadcrumb-item > a {
+    color: #1A1448;
+    font-weight: 600; }
+
+td > a {
+  color: #004282;
+  text-decoration: underline; }
+  td > a:hover {
+    color: #1A1448;
+    text-decoration: underline; }
+
 a:hover {
   text-decoration: none; }
 
@@ -67,7 +95,8 @@ aside {
     padding-left: 15px;
     position: fixed;
     width: 270px;
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2); }
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1; }
   aside nav {
     margin-top: 70px; }
   aside nav > ul > li > a {
@@ -188,7 +217,11 @@ header {
     .dataTables_filter label input {
       border-radius: 5px;
       border: solid 2px lightgray;
-      width: 250px; }
+      width: 250px;
+      background-image: url(./../images/icon_search.png);
+      background-repeat: no-repeat;
+      background-position: 2% center;
+      padding-left: 25px; }
 
 table.dataTable thead th, table.dataTable thead td {
   background-color: #EFD898;
